Fixed CSS issues on iOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,18 @@ body {
 	text-align: center;
 	}
 
-input {
+
+input[type="text"],input[type="button"],input[type="submit"] {
+	-webkit-appearance: none;
+	border-radius: 0;
+}
+
+select {
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
+textarea {
     -webkit-appearance: none;
     border-radius: 0;
 }
